Prevent dates from wrapping in content lists

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -190,6 +190,10 @@ html[data-theme="dark"] .sidebar-social-link-github img {
   margin-bottom: 0;
 }
 
+.content-list-date {
+  white-space: nowrap;
+}
+
 .content-pagination {
   display: flex;
   flex-wrap: wrap;
